--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -23,13 +23,30 @@
         @apply prose-code:dark:text-gray-100;
         @apply prose-code:bg-gray-100;
         @apply prose-code:dark:bg-gray-900;
+        @apply block;
+        @apply p-2.5;
+        @apply w-full;
+        @apply text-sm;
+        @apply text-gray-900;
+        @apply bg-gray-50;
+        @apply rounded-lg;
+        @apply border;
+        @apply border-gray-300;
+        @apply focus:ring-primary-500;
+        @apply focus:border-primary-500;
+        @apply dark:bg-gray-700;
+        @apply dark:border-gray-600;
+        @apply dark:placeholder-gray-400;
+        @apply dark:text-white;
+        @apply dark:focus:ring-primary-500;
+        @apply dark:focus:border-primary-500;
     }
 }
+
 
 trix-toolbar .trix-button-row {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
 }
 
 trix-toolbar .trix-button {
